2002-02-09  Seth Nickell  <snickell@stanford.edu>

	* gnome-vfs-mime-magic:
	* gnome-vfs.mime:
	* icons/Makefile.am:
	* icons/gnome-application-x-abiword.png:

	Change abiword's default type to be appliction/x-abiword.
	This is advised by DV, and seems better to me too
	(the AbiWord people don't seem to have a preference). Its
	also what KDE currently uses.
	
2002-02-08  Darin Adler  <darin@bentspoon.com>

	* check-mime.pl: Add new keywords so the check doesn't fail.

2002-02-07  Seth Nickell  <snickell@stanford.edu>

	* gnome-vfs-mime-magic:

	Add magic for the "new" AbiWord format.

2002-02-07  Seth Nickell  <snickell@stanford.edu>

	* icons/Makefile.am:
	* icons/gnome-text-abiword.png:

	Add an AbiWord icon. Should be replaced with an icon
	that is "in theme" though.
	
2002-02-06  Larry Ewing  <lewing@ximian.com>

	* gnome-vfs.applications: use gimp-remote --new rather than just
	gimp so that calls don't start multiple gimp instances.

2002-02-01  Michael Meeks  <michael@ximian.com>

	* gnome-vfs.keys.in: replace EOG with image-viewer.

2002-01-31  Bradford Hovinen  <hovinen@ximian.com>

	* gnome-vfs.keys.in: Added category, use_category_default fields

2002-01-30  Seth Nickell  <snickell@stanford.edu>

	* configure.in:

	Bump version number to 1.0.2.
	
2002-01-30  Seth Nickell  <snickell@stanford.edu>

	* gnome-vfs.keys.in:

	Update "GNOME application launcher" to
	"application launcher", since KDE uses .desktop files
	too.

2002-01-27  Anders Carlsson  <andersca@gnu.org>

	* icons/gnome-application-x-gnome-app-info.png: 
	Update icon.

2002-01-27  Seth Nickell  <snickell@stanford.edu>

	* gnome-vfs-mime-magic:

	Remove magic for "detecting" C source code, because it
	often misfires and I can't think of a situation where
	source code isn't properly identified by extension
	anyway.

2002-01-22  jacob berkman  <jacob@ximian.com>

	* configure.in (AC_OUTPUT):
	* Makefile.am (SUBDIRS): move man page from gnome-vfs here
